# openclaw-broker

./: .gitignore  AGENTIC_DEBUG_STATUS.md  AGENTIC_MODE_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AGENTIC.md  README.md  SECURITY.md  custom_personas.json.example  custom_website_config.json.example  discord_bot_memory.db-shm  discord_bot_memory.db-wal  pyproject.toml  requirements-memory.txt  requirements-runner-enhanced.txt  requirements.txt
broker/: app.py  broker.env.example  caps.py  streaming.py
deploy/: install_bot_instance.sh  install_runner_systemd.sh  install_wsl_llamacpp.sh  onboard_bot.sh  onboard_broker.sh  onboard_runner.sh
discord_bot/: agentic_session.py  autonomous_learning.py  bot.env.example  bot.py  chat_commands.py  conversational_tools.py  custom_personas.json.example  discord_tools.py  embeddings.py  memory.py  natural_language_router.py  personality.py  redaction.py  self_memory.py  streaming_client.py
docs/: AI_WEBSITE_GUIDE.md  BROKER_BACKUP_RETENTION.md  COMMANDS_WSL_AND_VPS.md  CONVERSATIONAL_FEATURES.md  DEPLOY_AND_UPDATE.md  DISCORD_BOT_DEPLOY.md  DISCORD_BOT_SMOKE.md  INSTALLATION_GUIDE.md  MULTI_WORKER_LLM_SMOKE.md  NODEJS_EVENT_LOOP_GUIDE.md  PROJECT_REVIEW_REPORT.md  PR_DESCRIPTION_SPRINT1.md  PR_DESCRIPTION_SPRINT2.md  PUSHING_TO_GITHUB.md  RELEASE_NOTES.md  RUNNER_REPO_CONFIG.md  SECURITY_CADENCE.md  SECURITY_OBSERVABILITY.md  TOKEN_ROTATION_AND_INCIDENT_RESPONSE.md  URGO_ENHANCEMENT_GUIDE.md  VPS_CLI_SETUP.md  VPS_FIREWALL.md  WSL_RUNNER_LOGS.md
runner/: __init__.py  browser_tools.py  cli_router.py  (+17 more)
(+58 files in other folders)
